kubernetes/gitlab-system/overlays/okd-yaml/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: gitlab
  namespace: gitlab-system
  labels:
    app: gitlab
    app.kubernetes.io/instance: gitlab-system
spec:
  host: gitlab.<path:secret/data/gitlab/domain#url>
  to:
    kind: Service
    name: gitlab
    weight: 100
  port:
    targetPort: 443
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
